--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Sam-1210.github.io/",
+  "homepage": "http://Sam-1210.github.io/Sam-1210",
   "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
